Revert "OSJ-298: Replace use of finalize() in X509Certificate and X509CRL impls"
This reverts commit 2677c2bda7abf824458752e071a8adc2df19f16d.